--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "../node_modules/hammerjs/hammer.min.js"
+            ]
           },
           "configurations": {
             "production": {
